# robotframework-dependencylibrary

./: .gitignore  README.md  pyproject.toml
src/DependencyLibrary/: __init__.py  library.py  run.py  solver.py
tests/: test_dependency_solver.py
tests/data_1/: suiteA.robot  suiteB.robot
tests/data_10/: resource.robot
tests/data_2/: suiteC.robot
tests/data_3/: suiteC.robot
tests/data_4/: suiteD.robot  suiteE.robot
tests/data_5/: suiteD.robot  suiteE.robot
tests/data_6/: suiteE.robot
tests/data_6/subsuite/: suiteE.robot
tests/data_8/: suiteA.robot  suiteB.robot
tests/data_9/: suiteA.robot  suiteB.robot
